...
    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_slidebar">slidebarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_myfriend">companions</string>
    <string name="title_activity_friendinfo">friendinfo</string>
    <string name="title_activity_coin">Coin</string>
    <string name="title_activity_mywallet2">sub inventory</string>
    <string name="title_activity_signup2">Sign up</string>
    <string name="title_activity_walletselect">My Inventory</string>
    <string name="title_activity_profile">profile</string>
    <string name="title_activity_mapbox2">map</string>
    <string name="contract">"let it here by be known, it is the yarl's will that the following facts should be known, and rules be complied when come to the issues around bounty on the dragons:\n
        1. the dragons that roam around the country side , when approached and killed by the advantures, drop dragon bones.It is a valuable resource as it can be made into one of the finest armors and weapons(that is, if you are level 100 at blacksmith, though) Different type of dragons drop different type of scales.
        2. the dragon bones that is collected from the dragons can be exchange to gold , subject to exchange rate given by the steward, which would update everyday as the steward sees fit.. larger piece of scale would have better price porpotional to the size.the advantagers can exchange at most 25 pieces of scales for gold at each day.
...
        6. you can see a dragon only when you gets close enough to it.

        " </string>
    <string name="prompt_friend_username">input your companion username </string>
    <string name="delete_friend">delete friend</string>
    <string name="refuse">refuse</string>
    <string name="accept">accept</string>
    <string name="title">Skyrim Local Edition</string>
    <string name="subtitle">Welcome to Whiterun!</string>
    <string name="truetitle">also known as coinZ</string>
    <string name="testing">testing</string>
    <string name="save_it">save it</string>
    <string name="penytext">fire dragon bone:  %1$s kg</string>
...
