<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:paddingTop="10dp"
android:paddingBottom="10dp"
    >


    <TextView
        android:id="@+id/friend"
        android:layout_width="236dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="testing" />

<Button
    android:id="@+id/deleteButton"
    android:layout_width="136dp"
    android:layout_height="wrap_content"
    android:text="@string/delete_friend" />

</LinearLayout>